--- a/package.json
+++ b/package.json
@@ -1,39 +1,42 @@
 {
-  "name": "dashboard-kit-free-bootstrap-admin-template",
-  "version": "3.0.0",
-  "description": "DashboardKit Bootstrap 5 Vanilla Js Free Admin Template",
+  "name": "DashboardKit-bootstrap-admin-template",
+  "version": "1.0.0",
+  "description": "DashboardKit Bootstrap 5 Admin Template",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "DashboardKit",
-  "license": "MIT",
-  "dependencies": {
-    "animate.css": "^3.7.0",
-    "apexcharts": "^3.6.9",
-    "bootstrap": "^5.1.3",
-    "browser-sync": "^2.26.3",
-    "clipboard": "^2.0.8",
-    "feather-icons": "^4.25.0",
-    "gulp-file-include": "^2.0.1",
-    "gulp-sourcemaps": "^2.6.5",
-    "perfect-scrollbar": "^1.4.0",
-    "prismjs": "^1.16.0"
-  },
+  "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.2.3",
-    "gulp": "^4.0.0",
-    "gulp-autoprefixer": "^6.0.0",
-    "gulp-babel": "^8.0.0-beta.2",
-    "gulp-cssbeautify": "^1.0.1",
+    "@babel/core": "^7.21.5",
+    "@babel/preset-env": "^7.21.5",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^8.0.0",
+    "gulp-babel": "^8.0.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-cssbeautify": "^3.0.1",
     "gulp-cssmin": "^0.2.0",
     "gulp-htmlmin": "^5.0.1",
-    "gulp-inject": "^5.0.2",
+    "gulp-inject": "^5.0.5",
     "gulp-minify": "^3.1.0",
+    "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.0.2",
+    "gulp-sequence": "^1.0.0",
     "gulp-smushit": "^1.2.0",
-    "gulp-uglify": "^3.0.1",
-    "merge-stream": "^1.0.1"
+    "gulp-uglify": "^3.0.2",
+    "merge-stream": "^2.0.0"
+  },
+  "dependencies": {
+    "animate.css": "^4.1.1",
+    "apexcharts": "^3.40.0",
+    "bootstrap": "^5.0.0-alpha2",
+    "browser-sync": "^2.29.1",
+    "feather-icons": "^4.29.0",
+    "gulp-file-include": "^2.3.0",
+    "gulp-sourcemaps": "^3.0.0",
+    "jquery": "^3.6.4",
+    "perfect-scrollbar": "^1.5.5",
+    "prismjs": "^1.29.0"
   }
 }
